# feedbin-tools

./: .gitignore  README.md  requirements.txt  setup.cfg
.github/workflows/: test.yml
feedbin_tools/: cli.py
subcommands/: entries.md  feed.md  feedmeta.md  starred.md  subscriptions.md
tests/: test_feedbin_tools.py
