[metadata]
name = feedbin-tools
version = 0.1.0
long_description = file: README.md
long_description_content_type = "text/markdown"
description = "Tools for Working with the Feedbin API"
author = "Brian M. Dennis"
license = "Apache License, Version 2.0"
url = "https://github.com/crossjam/feedbin-tools"
python_requires = ">=3.7"

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
		 click
		 dateparser
		 pyrate-limiter
		 requests
		 requests-cache
		 stamina
		 tenacity
		 keyring
		 
[options.extras_require]
test = pytest
       requests-mock


[options.entry_points]
console_scripts =
   feedbin-tools = feedbin_tools.cli:cli
